plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'kotlin-android-extensions'
}

apply plugin: "de.mannodermaus.android-junit5"
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'

android {
    compileSdk 32

    defaultConfig {
        testInstrumentationRunnerArguments runnerBuilder: 'de.mannodermaus.junit5.AndroidJUnit5Builder'
        applicationId "com.example.pokemons"
        minSdk 21
        targetSdk 32
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    kotlinOptions {
        freeCompilerArgs = ['-Xjvm-default=enable']
    }

    sourceSets {
        test.java.srcDirs += 'src/test/kotlin'
        androidTest.java.srcDirs += 'src/androidTest/kotlin'
    }

    testOptions {
        unitTests.all {
            useJUnitPlatform()
            jvmArgs '--enable-preview'
        }
    }


    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    kotlinOptions {
        jvmTarget = '11'
    }
    buildFeatures {
        viewBinding true
    }
}

//Pokemon API
//dependencies {
//    implementation 'com.github.PokeAPI:pokekotlin:2.3.1'
//}

//Testing UI
dependencies {
    debugImplementation("androidx.fragment:fragment-testing:1.4.1")
    androidTestImplementation "androidx.navigation:navigation-testing:2.4.0"
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
//    androidTestImplementation "org.mockito:mockito-core:4.0.0"
    androidTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
//    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
    androidTestImplementation 'org.junit.platform:junit-platform-commons:1.8.2'
    androidTestImplementation 'androidx.test:core:1.4.1-alpha03'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'com.android.support.test:rules:1.0.2'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    androidTestImplementation 'androidx.test:core-ktx:1.4.0'

    androidTestImplementation "de.mannodermaus.junit5:android-test-core:1.3.0"
    androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:1.3.0"

    androidTestImplementation "androidx.navigation:navigation-testing:2.4.0"
    debugImplementation("androidx.fragment:fragment-testing:1.5.0-alpha01")
    debugImplementation("androidx.fragment:fragment-ktx:1.5.0-alpha01")
    debugImplementation 'androidx.test:core:1.4.1-alpha03'
    debugImplementation("androidx.test:rules:1.4.0")
    debugImplementation("androidx.test:runner:1.4.0")
}

//Testing (Unit)
dependencies {
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.platform:junit-platform-commons:1.8.2'
    testImplementation 'androidx.test.ext:junit:1.1.3'
    testImplementation 'com.android.support.test:rules:1.0.2'
    testImplementation 'com.android.support.test:runner:1.0.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

//Retrofit
dependencies {
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
}

//Room
dependencies {
    implementation "androidx.room:room-runtime:2.4.1"
    implementation "androidx.room:room-ktx:2.4.1"
    kapt "androidx.room:room-compiler:2.4.1"
    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"

    testImplementation "androidx.room:room-testing:2.4.1"
}

// Dagger2
dependencies {
    implementation 'com.google.dagger:dagger-android:2.35.1'
    implementation 'com.google.dagger:dagger-android-support:2.35.1'
    kapt 'com.google.dagger:dagger-android-processor:2.35.1'
    kapt 'com.google.dagger:dagger-compiler:2.40.5'

    kapt("org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.3.0")
}

//RxKotlin
dependencies {
    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
    implementation "androidx.room:room-rxjava2:2.4.1"
}

dependencies {

    implementation 'androidx.test.espresso:espresso-contrib:3.4.0'
    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
    implementation 'androidx.core:core-ktx:1.7.0'
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    
    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    //noinspection LifecycleAnnotationProcessorWithJava8
    kapt "androidx.lifecycle:lifecycle-compiler:2.5.0-alpha01"
}